--- a/src/index.css
+++ b/src/index.css
@@ -66,7 +66,24 @@ button:focus-visible {
     background-color: #f9f9f9;
   }
 }
+/*
 body.scanner-active {
   background: transparent;
   visibility: hidden;
+}*/
+body.scanner-active {
+  --background: transparent;
+  --ion-background-color: transparent;
+}
+.permission-button {
+  padding: 10px 20px;
+  background-color: #007bff;
+  color: white;
+  border: none;
+  border-radius: 5px;
+  cursor: pointer;
+}
+
+.permission-button:hover {
+  background-color: #0056b3;
 }
